--- a/package.json
+++ b/package.json
@@ -28,17 +28,20 @@
   },
   "homepage": "https://github.com/ianrose/deventy#readme",
   "devDependencies": {
+    "dotenv-webpack": "^2.0.0",
     "light-server": "2.6.4"
   },
   "dependencies": {
     "@11ty/eleventy": "^0.9.0",
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
+    "@nacelle/client-js-sdk": "^2.0.2",
     "acorn": "^7.0.0",
     "autoprefixer": "^9.6.5",
     "babel-loader": "^8.0.6",
     "cssnano": "^4.1.10",
     "cssnano-preset-advanced": "^4.0.7",
+    "dotenv": "^8.2.0",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.1.3",
